style.css
.container.main {
    display: flex;
    align-items: center;
    padding: 50px 0px 50px 0px;
    border-top: 1px grey solid;
    border-bottom: 1px grey solid;
    max-width: 700px;
    width: 100%;
}

.controllers {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.container.grid {
    
    display: flex;
    width: 50%;
    aspect-ratio: 1/1;
    flex: auto;

    flex-direction: column;
    margin: 20px;

}

.row {
    display: flex;
    flex: auto;
}

.cell {
    outline: 0.5px solid black;
    background-color: white;   
    flex: auto;
}

#select-grid-size {
    margin: 0;
}

.grid-size {
    margin-bottom: 5px;
    margin-top: 5px;
    font-family: 'Courier New', Courier, monospace;
}

#pick-color {
    margin-bottom: 5px;
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0;
    padding: 0;
}

html {
    background-color: rgba(243, 250, 255, 0.933);
    font-family: 'Courier New', Courier, monospace;
    height: 100%;
}

.footer {
    display: block;
    margin-top: auto;
    font-size: 14px;
    bottom: 0;
    justify-content: center;
    padding-top: 50px;
    margin-bottom: 15px;
    align-self: center;
    align-content: center;
}

a {
    text-decoration: none;
    color: rgb(0, 0, 0);
}

#gh-logo {
    width: 35px;
    height: 35px;
    margin-bottom: -12px;
    margin-left: 10px;
}

